--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -1,28 +1,174 @@
-﻿<!DOCTYPE html>
+﻿@inject LconsultDBContext _context
+
+@{
+    var CategoriesList = _context.Categories.Select(C => new
+    {
+        C.CategoryId,
+        C.CategoryName
+    }).ToList();
+    //var CategoriesList = new SelectList(, "CategoryId", "CategoryName");
+
+
+}
+
+
+<!DOCTYPE html>
 <html lang="en">
 
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+
+    <title>Learn consult</title>
 
 
-<!--<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Learn consult </title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/first.styles.css" asp-append-version="true" />
-</head>-->
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+
+
+
+    <link href="~/css/site.css" rel="stylesheet">
+    <link href="~/css/site1.css" rel="stylesheet">
+    <link href="~/css/site2.css" rel="stylesheet">
+    <link href="~/css/site3.css" rel="stylesheet">
+    <link href="~/css/site4.css" rel="stylesheet">
+
+
+</head>
 
 <body>
 
-            @RenderBody()
-       
+    <div id="preloader">
+        <div class="jumper">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+
+    <!-- Header -->
+    <header class="">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+
+                <a class="navbar-brand" href="index.html">
+                    <h2><em>L</em>earn Consult</h2>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="nav-item" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Category
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                @* @foreach (var category in CategoriesList)
+                                {
+                                    <li><a class="dropdown-item" asp-controller="home" asp-action="Category">@category.CategoryName</a></li>
+                                } *@
+                                <li><a class="dropdown-item" asp-controller="home" asp-action="category">another action</a></li>
+                                <li><a class="dropdown-item" asp-controller="home" asp-action="category">something else here</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="text-end pe-4 me-4 border-dark search-btn">
+                            <div class="search-form">
+                                <form method="post" action="index.html">
+                                    <div class="form-group">
+                                        <div class="d-flex">
+                                            <input type="search" class="form-control border-0 rounded-pill" name="search-input" value="" placeholder="Search Here" required="" />
+                                            <button><i class="fa fa-search btn"></i></button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </li>
+
+                        <li class="nav-item ">
+                            <a class="nav-link" asp-controller="home" asp-action="ForInstructor">
+                                For Instructors
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a asp-controller="home" asp-action="Login" class="nav-link">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-controller="home" asp-action="SignUp" class="nav-link">Sign Up</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+
+        </nav>
+    </header>
+
+
   
+            @RenderBody()
 
 
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <footer class="footer_area section_gap_top">
+        <div class="container">
+            <div class="row single-footer-widget">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="copy_right_text">
+                        <p>
+                            All Copyrights &copy reserved
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="left-content">
+                        <ul class="social-icons">
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+
+    <!-- Additional Scripts -->
+    <script src="~/js/site.js"></script>
+    <script src="~/js/site1.js"></script>
+    <script src="~/js/site2.js"></script>
+    <script src="~/js/site3.js"></script>
+    <script src="~/js/site4.js"></script>
+
+
+    <script language="text/Javascript">
+        cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
+        function clearField(t) {                   //declaring the array outside of the
+            if (!cleared[t.id]) {                      // function makes it static and global
+                cleared[t.id] = 1;  // you could use true and false, but that's more typing
+                t.value = '';         // with more chance of typos
+                t.style.color = '#fff';
+            }
+        }
+    </script>
+
 </body>
 </html>
