--- a/WebApplication2/Views/Course/Details.cshtml
+++ b/WebApplication2/Views/Course/Details.cshtml
@@ -445,7 +445,6 @@
                                                             <div class="d-flex">
                                                                 <div class="user-info">
                                                                     <strong>@items.Student</strong>
-                                                                    <span class="text-muted small">@items.V </span>
                                                                     <ul class="stars">
                                                                         @switch (items.Rate)
                                                                         {
@@ -520,9 +519,6 @@
                                                          <div class="progress-container">
                                                             <div class="progress-bar" data-progress="@((items.EngagementLevel / 10.0) * 100)%"></div>
                                                         </div>
-                                                        <h4 class="text-muted small">Technical Quality</h4>
-                                                         <div class="progress-container">
-                                                            <div class="progress-bar" data-progress="@((items.TechnicalQuality / 10.0) * 100)%"></div>
                                                         </div>
                                                         <h4 class="text-muted small">Support Quality</h4>
                                                         <div class="progress-container">
@@ -787,8 +783,40 @@
 
                 </div>
                 </div>
+                @*                 <footer class="footer_area section_gap_top">
+                <div class="container">
+                <div class="row single-footer-widget">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                <div class="copy_right_text">
+                <p>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                All Copyrights &copy reserved
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
+                </div>
+                </div>
+                <div class="col-md-4">
+                <div class="left-content">
+                <ul class="social-icons">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                </ul>
+                </div>
+                </div>
+                </div>
+                </div>
+                </footer> *@
 
-@section Scripts{
+
+
+@*
+    </div>
+    </div> *@
+
+
+
     <script>
         $('.btn').click(function () {
             $('.collapse-content').toggle();
