--- a/WebApplication2/Views/Review/Details.cshtml
+++ b/WebApplication2/Views/Review/Details.cshtml
@@ -112,22 +112,22 @@
                     <div class="row">
                         <div class="col-lg-8">
                             <div class=" align-content-center" style="margin:15px;">
-                                <div class="rate">
-                                    <input type="radio" id="star5" asp-for="@Model.Rate" value="5" />
+                                <div class="rate" >
+                                    <input type="radio" id="star5" asp-for="@Model.Rate" value="5"/>
                                     <label for="star5" title="5">5 stars</label>
-                                    <input type="radio" id="star4" asp-for="@Model.Rate" value="4" />
+                                    <input type="radio" id="star4" asp-for="@Model.Rate" value="4"  />
                                     <label for="star4" title="4">4 stars</label>
-                                    <input type="radio" id="star3" asp-for="@Model.Rate" value="3" />
+                                    <input type="radio" id="star3" asp-for="@Model.Rate" value="3"  />
                                     <label for="star3" title="3">3 stars</label>
-                                    <input type="radio" id="star2" asp-for="@Model.Rate" value="2" />
+                                    <input type="radio" id="star2" asp-for="@Model.Rate" value="2"  />
                                     <label for="star2" title="2">2 stars</label>
-                                    <input type="radio" id="star1" asp-for="@Model.Rate" value="1" />
+                                    <input type="radio" id="star1" asp-for="@Model.Rate" value="1"  />
                                     <label for="star1" title="1">1 star</label>
 
                                 </div>
                             </div>
                             <fieldset>
-                                <textarea asp-for="@Model.Descritipn" rows="6" class="form-control" placeholder="Your Review" required></textarea>
+                                <textarea asp-for="@Model.Descritipn" rows="6" class="form-control" placeholder="Your Review" readonly></textarea>
                             </fieldset>
 
                         </div>
@@ -150,7 +150,7 @@
                                         @for (int i = 1; i <= 10; i++)
                                         {
                                             <label class="me-2 ">
-                                                <input type="radio" asp-for="@Model.EngagementLevel" value="@i" />
+                                                <input type="radio" asp-for="@Model.EngagementLevel" value="@i"  />
                                                 @i
                                             </label>
                                         }
@@ -165,7 +165,7 @@
                                         @for (int i = 1; i <= 10; i++)
                                         {
                                             <label class="me-2">
-                                                <input type="radio" asp-for="@Model.ContentQuality" value="@i" />
+                                                <input type="radio" asp-for="@Model.ContentQuality" value="@i"  />
                                                 @i
                                             </label>
                                         }
@@ -180,7 +180,7 @@
                                         @for (int i = 1; i <= 10; i++)
                                         {
                                             <label class="me-2">
-                                                <input type="radio" asp-for="@Model.SupportQuality" value="@i" />
+                                                <input type="radio" asp-for="@Model.SupportQuality" value="@i"  />
                                                 @i
                                             </label>
                                         }
@@ -195,7 +195,7 @@
                                         @for (int i = 1; i <= 10; i++)
                                         {
                                             <label class="me-2">
-                                                <input type="radio" asp-for="@Model.TechnicalQuality" value="@i" />
+                                                <input type="radio" asp-for="@Model.TechnicalQuality" value="@i"  />
                                                 @i
                                             </label>
                                         }
@@ -213,7 +213,7 @@
                                         @for (int i = 1; i <= 10; i++)
                                         {
                                             <label class="me-2">
-                                                <input type="radio" asp-for="@Model.OverAllSatisfication" value="@i" />
+                                                <input type="radio" asp-for="@Model.OverAllSatisfication" value="@i"  />
                                                 @i
                                             </label>
                                         }
